<?xml version="1.0"?>

<!--
SPDX-FileCopyrightText: Copyright (c) 2022 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
SPDX-License-Identifier: Apache-2.0
-->

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolov5_isaac_ros</name>
  <version>0.0.0</version>
  <description>ROS2 package for YOLOv5 object detection to use with Nvidia Isaac ROS</description>
  <maintainer email="asawareeb@nvidia.com">admin</maintainer>
  <license>Apache-2.0</license>


  <depend>isaac_ros_dnn_encoders</depend>
  <depend>isaac_ros_nitros</depend>
  <depend>isaac_ros_nitros_image_type</depend>
  <depend>isaac_ros_nitros_detection2_d_array_type</depend>
  <depend>isaac_ros_nitros_tensor_list_type</depend>


  <exec_depend>utils</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>isaac_ros_tensor_rt</exec_depend>
  <exec_depend>isaac_ros_triton</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>
  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
